fixed spacing after grade tables

--- a/public/stylesheets/content.css
+++ b/public/stylesheets/content.css
@@ -6,7 +6,7 @@ h1,h2,h3,h4,h5,h6,p,section div { margin-top: 0; margin-bottom: 12px; font-size:
 
 #wrapper #page .details, #wrapper table div { padding-left: 0; margin: 0; min-height: 0; }
 
-section:last-child div, section:last-child p { margin-bottom: 0; }
+section:last-child div, section:last-child p { margin-bottom: 1px; }
 h1 { font-size: 14pt; margin: 0; font-weight: normal; }
 hgroup { margin-bottom: 12px; }
 h2 { font-size: 12pt; }
